omni/tests/goldens/types/unknown_type_22.omni
let value22:Mystery22 = 1
